Update API to kfp==1.5.0, kfp-tekton==0.8.0
Resolves #44
Fixes #50
